# factory_manager

./: .env.example  .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
infra/: Dockerfile  docker-compose.local.yml  nginx.conf
requirements/: dev.txt  prod.txt
src/backend/: Dockerfile  manage.py
src/backend/directory/: admin.py  docs.py  models.py  serializers.py  urls.py  views.py
src/backend/directory/management/commands/: make_data.py
src/backend/directory/migrations/: 0001_initial.py
src/backend/factory_manager/: asgi.py  settings.py  urls.py  wsgi.py
